# Cognion

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  routes.py  services.py
backend/app/agents/: __init__.py  llm.py  model_adapter.py  orchestrator.py  parsers.py  schemas.py  state.py
backend/app/agents/core/: base.py
backend/app/auth/: __init__.py  context.py  dependencies.py  mailer.py  rate_limit.py  security.py
backend/app/db/: __init__.py  models.py  session.py  startup.py
backend/app/routes/: __init__.py  auth.py  chat.py  common.py  knowledge_graph.py  notes.py  papers.py  users.py
backend/app/services/: __init__.py  cognitive_context.py  config.py  knowledge_graph.py  llm.py  mineru.py  note_storage.py  orchestrator_demo.py  pdf_storage.py
backend/app/services/agents/: __init__.py  base.py  llm.py  model_adapter.py  parsers.py  schemas.py
backend/app/services/knowledge_graph/: __init__.py  apply.py  common.py  matching.py  patch.py  store.py
backend/scripts/: sync_storage_with_db.py
backend/test/: manual_model_adapter_call.py  manual_model_adapter_call_blocking.py  manual_session_notes_generation.py  test_attention_notes_fixture.py  test_auth.py  test_chat_session_names.py  test_cognitive_context.py  test_knowledge_graph_route.py  test_model_adapter_logs.py  test_oss_mineru.py  test_qa_pdf_context.py  test_session_notes_parsers.py  test_session_notes_pipeline.py
backend/test/fixtures/: attention_notes_dataset.py
frontend/: index.html  (+3 more)
(+63 files in other folders)
